--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.persapiens</groupId>
-    <artifactId>jsf-spring-boot-starter-example</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <artifactId>jsf-spring-boot-starter-samples</artifactId>
+    <version>1.3.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-    <name>jsf-spring-boot-starter-example</name>
-    <description>Example project for Jsf Spring Boot Starter</description>
+    <name>jsf-spring-boot-starter-samples</name>
+    <description>Example projects for Jsf Spring Boot Starter</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -22,48 +22,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         
-        <jsf-spring-boot-starter.version>1.3.0</jsf-spring-boot-starter.version>
+        <jsf-spring-boot-starter.version>1.3.1-SNAPSHOT</jsf-spring-boot-starter.version>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>		
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-        </dependency>     
-           
-        <dependency>
-            <groupId>com.github.persapiens</groupId>
-            <!-- Change artifactId to jsf-jetty-spring-boot-starter to use Jetty servlet container -->
-            <!-- Change artifactId to jsf-undertow-spring-boot-starter to use Undertow servlet container -->
-            <!-- Change artifactId to jsf-myfaces-spring-boot-starter to use MyFaces instead of Mojarra -->
-            <!-- Change artifactId to jsf-jetty-myfaces-spring-boot-starter to use Jetty servlet container and MyFaces instead of Mojarra-->
-            <!-- Change artifactId to jsf-undertow-myfaces-spring-boot-starter to use Undertow servlet container and MyFaces instead of Mojarra-->
-            <artifactId>jsf-spring-boot-starter</artifactId>
-            <version>${jsf-spring-boot-starter.version}</version>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
-	
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+    <modules>
+       <module>jsf-spring-boot-starter-sample</module>
+       <module>jsf-spring-boot-starter-security-sample</module>
+    </modules>
 
 </project>
