--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,31 +2,31 @@ jsf:
   PROJECT_STAGE: Production
   primefaces:
     theme: overcast
-joinfaces:
-  version: @project.parent.version@
-spring-boot:
-  version: @project.parent.parent.version@
-tomcat:
-  version: @tomcat.version@
-jetty:
-  version: @jetty.version@
-undertow:
-  version: @undertow.version@
-cdi:
-  version: @cdi.version@
-mojarra:
-  version: @javax.faces.version@
-myfaces:
-  version: @myfaces.version@
-omnifaces:
-  version: @omnifaces.version@
-angularfaces:
-  version: @angularfaces.version@
-primefaces:
-  version: @primefaces.version@
-primefaces-extensions:
-  version: @primefaces-extensions.version@
-bootsfaces:
-  version: @bootsfaces.version@
-butterfaces:
-  version: @butterfaces.version@
+#joinfaces:
+#  version: @project.parent.version@
+#spring-boot:
+#  version: @project.parent.parent.version@
+#tomcat:
+#  version: @tomcat.version@
+#jetty:
+#  version: @jetty.version@
+#undertow:
+#  version: @undertow.version@
+#cdi:
+#  version: @cdi.version@
+#mojarra:
+#  version: @javax.faces.version@
+#myfaces:
+#  version: @myfaces.version@
+#omnifaces:
+#  version: @omnifaces.version@
+#angularfaces:
+#  version: @angularfaces.version@
+#primefaces:
+#  version: @primefaces.version@
+#primefaces-extensions:
+#  version: @primefaces-extensions.version@
+#bootsfaces:
+#  version: @bootsfaces.version@
+#butterfaces:
+#  version: @butterfaces.version@
